[package]
name = "ampere-installer"
version = "0.1.0-rc0"
authors = [ "Hyun Ho Bae" ]
edition = "2021"
description = "Ampere OS Image Creator"
documentation = "https://docs.rs/ampere-installer"
readme = "./README.md"
repository = "https://github.com/TheRustUser/ampere-installer"
license-file = "./LICENSE.md"
keywords = [ "osdev" ]
categories = [ "Operating System" ]

[dependencies]
